# bsnap

./: .gitignore  meson.build
cmd/: parse_options.c
docs/: doc.conf.in  meson.build
docs/man/: bsnap.1
include/: cmd.h  config.h.in  main.h  meson.build  print_utils.h  structures.h  utils.h
include/commands/: snap.h
include/structures/: blist.h  bmap.h  global_defs.h
src/: config.c  main.c  meson.build  print_utils.c
src/cmd/: cmd.h  context.c  data.c  help.c  parse_command.c  parse_options.c
src/snap/: snap-action.c  snap.c
src/structures/: blist.c  bmap.c  global_defs.c  list.c
tests/: meson.build  test-list-iter.c  test-list.c  test-map-iter.c  test-map.c
