base_dir = 'src'

src += [base_dir / 'main.c',
		base_dir / 'cmd' / 'context.c',
		base_dir / 'cmd' / 'data.c',
		base_dir / 'cmd' / 'parse_command.c',
		base_dir / 'cmd' / 'parse_options.c',
		base_dir / 'cmd' / 'util.c',
		base_dir / 'cmd' / 'help.c',
	    base_dir / 'snap' / 'snap-action.c', # debug
	    # TODO
	  ]

# // TODO: this is only for debug purposes. Has to be removed
includes += include_directories('.')


