base_dir = 'src'

src += [base_dir / 'cmd' / 'context.c',
		base_dir / 'cmd' / 'data.c',
		base_dir / 'cmd' / 'parse_command.c',
		base_dir / 'cmd' / 'parse_options.c',
		base_dir / 'cmd' / 'util.c',
		base_dir / 'cmd' / 'help.c',
		base_dir / 'print_utils.c',
		base_dir / 'snap' / 'snap.c',
		base_dir / 'structures' / 'blist.c',
		base_dir / 'structures' / 'bmap.c',
		base_dir / 'structures' / 'global_defs.c',
		base_dir / 'config.c',
		base_dir / 'main.c'
	  ]

